--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: echo "${{ secrets.PROD_ENV_FILE }}" > data/config.env
+    - run: pm2 restart BackendAPI
