--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+    - run: npm test
     - run: echo "${{ secrets.PROD_ENV_FILE }}" > data/config.env
     - run: pm2 restart BackendAPI
