--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: echo "${{ secrets.PROD_ENV_FILE }}" > data/config.env
+    - run: npm test
     - run: pm2 restart BackendAPI
